--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=root1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.freemarker.expose-request-attributes=true
