--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.datasource.password=root1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+server.port=3000
+
 spring.freemarker.expose-request-attributes=true
